add test for controllers, fix bugs in model